# rag_demo

./: .gitignore  01_💬_Chat_With_Documents.py  Dockerfile  README  agent_demo.ipynb  agent_demo_2.ipynb  agent_demo_3.ipynb  build_data_base.py  document_parser.py  init.py  main.py  main_page.py  pyproject.toml  requirements.txt  sidebar.py
pages/: 01_upload_files.py  02_⁉️_Question_-_Answer.py  02_💬_Chat_With_Documents.py  09_📂_Upload_Documents.py
